--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <link rel="shortcut icon" href="./imagenes/favicon.svg" type="image/x-icon">
     <title>Colores Aleatorios</title>
 </head>
-<body>
+<body class="centrar-flex">
+    <div id="contenedor" class="centrar-flex">
+<p id="color">#2B807B</p>
+<button id="boton-color">CAMBIAR COLOR</button>
+    </div>
+
+
     <script src="app.js"></script>
 </body>
 </html>
